plugins {
	id "application"
	id "com.palantir.graal" version "0.7.2"
}

plugins {
	id "com.diffplug.spotless" version "5.7.0"
}

repositories {
	mavenLocal()
	jcenter()
}

java.sourceCompatibility = JavaVersion.VERSION_11
java.targetCompatibility = JavaVersion.VERSION_11

dependencies {
	// Get rid of some unneeded dependencies here
	implementation "org.graylog2.repackaged:natty:0.8-1"

	// Need to use https://picocli.info/picocli-on-graalvm.html
	implementation "info.picocli:picocli:4.5.2"
	annotationProcessor "info.picocli:picocli-codegen:4.5.2"

	implementation "org.xerial:sqlite-jdbc:3.32.3.2"

	testImplementation "junit:junit:4.12"
}

application.mainClassName = "com.tersesystems.blacklite.reader.BlackliteReader"

graal {
	graalVersion("20.3.0")
	javaVersion("11")
	mainClass(application.mainClassName)
	outputName("blacklite-reader")
	option("--verbose")
	option("--no-server")
	option("--no-fallback")
	option("-H:+ReportExceptionStackTraces")
	option("-H:+PrintClassInitialization")
	option("-J--add-exports=java.base/jdk.internal.perf=ALL-UNNAMED")
	option("-J--add-opens=java.base/jdk.internal.perf=ALL-UNNAMED")
}
